feat(优化): 优化项目，减少目录层级
